fixed top-nav on mobile view

--- a/docs/assets/css/app.css
+++ b/docs/assets/css/app.css
@@ -5789,7 +5789,7 @@ a.thumbnail {
     padding: 5;
     margin: 0; }
   .top-bar-right {
-    margin-left: 15px;
+    margin-left: 30px;
     top: 100px; }
   .top-bar-right li a {
     color: #000;
